Fix misalignment on the texts' top

--- a/styles/index.less
+++ b/styles/index.less
@@ -27,6 +27,7 @@ body {
       float: left;
 
       > pre {
+        margin-top: 0;
         overflow: auto;
         white-space: pre-wrap;       /* CSS 3 */
         white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
